# Altruisty

backend/: .gitignore  database.db  main.py  pyproject.toml
backend/Models/: __init__.py  company_model.py  score_model.py  task_model.py  user_model.py
backend/Schema/: chat_schema.py  password_schema.py  test_schema.py
backend/ai/: chat.py  intents.json
backend/ai/models/: Model V1.pkl
backend/ai/wordlist/: words.pkl
backend/api/v1/: api.py
backend/api/v1/endpoint/: chat.py  company.py  email.py  password.py  task.py  test.py  token.py  user.py
backend/core/: db.py  security.py  settings.py
backend/curd/: company_curd.py  email_curd.py  password_curd.py  tasks_curd.py  test_curd.py  user_curd.py
backend/migration/: env.py
backend/migration/versions/: 2024_02_21_1821-d88e301c2224_added_initial_score_to_user_table.py  2024_02_23_1621-8fa8d3e13b5b_user_score_company_added.py  2024_02_23_1723-637d740fa95b_user_score_company_added.py  2024_02_23_1929-ba275afd0879_the_is_first_loggedin_added.py  2024_02_26_2001-d88f3d1b2282_taable_init.py  2024_02_27_0735-51e040a63d97_unique_for_company_owner.py
backend/utils/: email.py  otp.py  question.py  s3.py  task.py  tasks.py
client/: next.config.mjs  package-lock.json  package.json
client/src/app/: globals.css  layout.js  page.js
client/src/app/company_info/: page.js
client/src/app/dashboard/: page.js
client/src/app/email_otp/: page.js
client/src/app/login/: page.js
client/src/app/profile/: page.js
client/src/app/questions/: page.js
client/src/components/: ChatBox.jsx  Navbar.jsx
(+5 files in other folders)
