[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["naveen-ravi2810 <rnaveen28102003@gmial.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.2"}
sqlmodel = "^0.0.16"
pyjwt = "^2.8.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.27.1"
bcrypt = "^4.1.2"
validate-email = "^1.3"
redis = "^5.0.1"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
