[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["naveen-ravi2810 <rnaveen28102003@gmial.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.2"}
sqlmodel = "^0.0.16"
pyjwt = "^2.8.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.27.1"
bcrypt = "^4.1.2"
validate-email = "^1.3"
redis = "^5.0.1"
alembic = "^1.13.1"
nltk = "^3.8.1"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
psycopg2 = "^2.9.9"
boto3 = "^1.34.49"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
